--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,53 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+@layer components {
+    .description {
+        @apply font-light text-2xl sm:text-3xl md:text-4xl md:leading-snug
+    }
+    .input {
+        @apply  p-3 border border-gray-400 rounded-lg w-full hover:outline hover:outline-1
+        text-black
+    }
+    .button {
+        @apply p-3 rounded text-white text-center w-full mt-10 bg-blue-600
+         hover:bg-blue-700 transition-all shadow-md 
+    }
+    .icon {
+        @apply xl:inline-flex p-2 h-10 w-10 bg-gray-200 rounded-full cursor-pointer hover:bg-gray-300 text-black;
+      }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.fade-in {
+    animation: scale-in 0.5s forwards ;
+  }
+  
+  .fade-out {
+    animation: scale-out 0.5s forwards;
+  }
+  
+  @keyframes scale-in {
+    0% {
+      transform: scale(0);
+    }
+  
+    100% {
+      transform: scale(100%);
+    }
+  }
+  
+  @keyframes scale-out {
+    0% {
+      transform: scale(100%);
+    }
+  
+    100% {
+      transform: scale(0%);
+    }
+  }
+
+body {
+    background-color: #eee;
 }
